--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "blueimp-md5": "^2.10.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.0",
-    "mongoose": "^5.0.10"
+    "mongoose": "^5.0.10",
+    "validator": "^9.4.1"
   }
 }
