--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.10",
+    "socket.io": "^2.0.4",
     "validator": "^9.4.1"
   }
 }
